================================================================================

# Future

## New Tools

## New Features

## Fixes
- `sort`: fix potential crash when switching between info tabs

## Misc Improvements
- `reveal`: automatically reset saved map state when a new save is loaded

## Documentation

## API
- ``Units::assignTrainer``: assign a trainer to a trainable animal

## Lua
- ``dfhack.units.isTamable``: return false for invaders to match vanilla logic
- ``dfhack.units.assignTrainer``: expose new API to Lua

## Removed
- ``nopause``: functionality has moved to `spectate`

# 50.11-r5

## New Tools
- `gui/embark-anywhere`: new keybinding (active when choosing an embark site): Ctrl-A

## New Features
- `sort`: search and sort for the "choose unit to elevate to the barony" screen. units are sorted by the number of item preferences they have and the units are annotated with the items that they have preferences for
- `zone`: add button to location details page for retiring unused locations
- `gui/mass-remove`: new global keybinding: Ctrl-M while on the fort map

## Fixes
- `reveal`: now avoids revealing blocks that contain divine treasures, encased horrors, and deep vein hollows (so the surprise triggers are not triggered prematurely)
- `sort`: fix mouse clicks falling through the squad assignment overlay panel when clicking on the panel but not on a clickable widget
- `sort`: fix potential crash when removing jobs directly from the Tasks info screen
- `misery`: fix error when changing the misery factor
- When passing map movement keys through to the map from DFHack tool windows, also pass fast z movements (shift-scroll by default)
- `getplants`: fix crash when processing mod-added plants with invalid materials
- Dreamfort: fix holes in the "Inside+" burrow on the farming level (burrow autoexpand is interrupted by the pre-dug miasma vents to the surface)
- ``Maps::getBiomeType``, ``Maps::getBiomeTypeWithRef``: fix identification of tropical oceans