@@ -1823,6 +1823,7 @@ static const LuaWrapper::FunctionReg dfhack_units_module[] = {
     WRAPM(Units, setActionTimers),
     WRAPM(Units, setGroupActionTimers),
     WRAPM(Units, getUnitByNobleRole),
+    WRAPM(Units, unassignTrainer),
     { NULL, NULL }
 };
 
