@@ -65,10 +65,12 @@ Template for new versions:
 
 ## API
 - ``Units::assignTrainer``: assign a trainer to a trainable animal
+- ``Units::unassignTrainer``: unassign a trainer from an animal
 
 ## Lua
 - ``dfhack.units.isTamable``: return false for invaders to match vanilla logic
 - ``dfhack.units.assignTrainer``: expose new API to Lua
+- ``dfhack.units.unassignTrainer``: expose new API to Lua
 
 ## Removed
 - ``nopause``: functionality has moved to `spectate`
